Итоговое задание спринт #7 (Wordle) Внесены исправления по результатам ревью ( добавлены модификаторы доступа)